--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -50,12 +50,14 @@
     -fx-effect: dropshadow( gaussian , rgba(0,0,0,0.7) , 10,0,0,1 );
 }
 
-.hyperlink1{
-    -fx-text-fill: black;
+.hyperlink{
+    -fx-text-fill: #1e2761;
+    -fx-font-size: 14px;
+    -fx-font-style: italic;
 }
 
-.hyperlink1:hover{
-    -fx-text-fill: #1e2761;
+.hyperlink:hover{
+    -fx-text-fill: #7a2048;
 }
 
 .menu-button{
