--- a/src/views/content_page.fxml
+++ b/src/views/content_page.fxml
@@ -20,23 +20,23 @@
                 <Font name="System Bold" size="14.0" />
             </font>
         </Label>
-        <Button fx:id="edit_btn" disable="true" layoutX="945.0" layoutY="14.0" mnemonicParsing="false" onAction="#editButtonOnclick" prefHeight="30.0" prefWidth="70.0" styleClass="primary-button" text="Edit" visible="false">
+        <Button fx:id="edit_btn" disable="true" layoutX="945.0" layoutY="10.0" mnemonicParsing="false" onAction="#editButtonOnclick" prefHeight="30.0" prefWidth="70.0" styleClass="primary-button" text="Edit" visible="false">
             <font>
                 <Font size="14.0" />
             </font></Button>
-        <TextField fx:id="title_field" editable="false" layoutX="299.0" layoutY="51.0" prefHeight="35.0" prefWidth="443.0" promptText="Title" styleClass="textfield">
+        <TextField fx:id="title_field" editable="false" layoutX="299.0" layoutY="55.0" prefHeight="35.0" prefWidth="443.0" promptText="Title" styleClass="textfield">
             <font>
                 <Font name="System Bold" size="14.0" />
             </font></TextField>
-        <TextField fx:id="url_field" editable="false" layoutX="70.0" layoutY="99.0" prefHeight="35.0" prefWidth="900.0" promptText="URL" styleClass="textfield">
+        <TextField fx:id="url_field" editable="false" layoutX="70.0" layoutY="100.0" prefHeight="35.0" prefWidth="900.0" promptText="URL" styleClass="textfield">
             <font>
                 <Font name="System Bold" size="14.0" />
             </font></TextField>
-        <TextField fx:id="alternative_url_field" editable="false" layoutX="70.0" layoutY="143.0" prefHeight="35.0" prefWidth="900.0" promptText="Alternative URL (Optional)" styleClass="textfield">
+        <TextField fx:id="alternative_url_field" editable="false" layoutX="70.0" layoutY="145.0" prefHeight="35.0" prefWidth="900.0" promptText="Alternative URL (Optional)" styleClass="textfield">
             <font>
                 <Font name="System Bold" size="14.0" />
             </font></TextField>
-         <Pane fx:id="add_tag_pane" layoutX="70.0" layoutY="184.0" visible="false">
+         <Pane fx:id="add_tag_pane" layoutX="70.0" layoutY="190.0" visible="false">
             <children>
               <TextField fx:id="tag_field" layoutY="6.0" prefHeight="35.0" prefWidth="250.0" promptText="Tag (Optional)" styleClass="textfield">
                   <font>
@@ -50,26 +50,26 @@
               </Button>
             </children>
          </Pane>
-         <ScrollPane layoutX="442.0" layoutY="198.0" prefWidth="524.0">
+         <ScrollPane layoutX="450.0" layoutY="193.0" prefWidth="520.0">
             <content>
                <HBox fx:id="tag_list_hbox" spacing="5.0" />
             </content>
          </ScrollPane>
-        <Label layoutX="72.0" layoutY="260.0" text="Type:">
+        <Label layoutX="70.0" layoutY="245.0" text="Type:">
             <font>
                 <Font name="System Bold" size="16.0" />
             </font>
         </Label>
-        <ChoiceBox fx:id="type_choice_box" disable="true" layoutX="142.0" layoutY="257.0" prefWidth="150.0" />
-        <Label layoutX="70.0" layoutY="298.0" text="Privacy:">
+        <ChoiceBox fx:id="type_choice_box" disable="true" layoutX="140.0" layoutY="245.0" prefWidth="150.0" />
+        <Label layoutX="70.0" layoutY="290.0" text="Privacy:">
             <font>
                 <Font name="System Bold" size="16.0" />
             </font>
         </Label>
-        <ChoiceBox fx:id="privacy_choice_box" disable="true" layoutX="140.0" layoutY="295.0" prefWidth="150.0" />
-         <Pane fx:id="user_permission_pane" layoutX="69.0" layoutY="333.0" stylesheets="@/styles/default.css">
+        <ChoiceBox fx:id="privacy_choice_box" disable="true" layoutX="140.0" layoutY="290.0" prefWidth="150.0" />
+         <Pane fx:id="user_permission_pane" layoutX="70.0" layoutY="330.0">
             <children>
-               <Pane fx:id="add_permission_pane" disable="true" layoutX="8.0" visible="false">
+               <Pane fx:id="add_permission_pane" disable="true" visible="false">
                   <children>
                     <TextField fx:id="username_field" layoutY="6.0" prefHeight="35.0" prefWidth="250.0" promptText="Username" styleClass="textfield">
                         <font>
@@ -78,30 +78,30 @@
                     </TextField>
                     <ChoiceBox fx:id="permission_choice_box" layoutX="365.0" layoutY="9.0" prefWidth="150.0" />
                      <Button layoutX="531.0" layoutY="9.0" mnemonicParsing="false" onAction="#addUser" prefHeight="30.0" prefWidth="60.0" styleClass="primary-button" text="Add" />
-                    <Label layoutX="263.0" layoutY="11.0" text="Permission:">
+                    <Label layoutX="265.0" layoutY="11.0" text="Permission:">
                         <font>
-                            <Font size="16.0" />
+                            <Font name="System Bold" size="16.0" />
                         </font>
                     </Label>
                   </children>
                </Pane>
-               <ScrollPane layoutY="55.0" prefHeight="175.0" prefWidth="898.0">
+               <ScrollPane layoutY="55.0" prefHeight="175.0" prefWidth="900.0" stylesheets="@/styles/default.css">
                   <content>
                      <VBox fx:id="user_list_vbox" disable="true" prefWidth="596.0" />
                   </content>
                </ScrollPane>
             </children>
          </Pane>
-        <TextArea fx:id="details_area" layoutX="69.0" layoutY="573.0" prefHeight="150.0" prefWidth="900.0" promptText="Details (Optional)">
+        <TextArea fx:id="details_area" layoutX="70.0" layoutY="580.0" prefHeight="150.0" prefWidth="900.0" promptText="Details (Optional)">
             <font>
                 <Font name="System Bold" size="14.0" />
             </font></TextArea>
-        <Button fx:id="save_btn" layoutX="459.0" layoutY="729.0" mnemonicParsing="false" onAction="#saveContent" prefHeight="50.0" prefWidth="120.0" styleClass="primary-button" text="Save" visible="false">
+        <Button fx:id="save_btn" layoutX="460.0" layoutY="750.0" mnemonicParsing="false" onAction="#saveContent" prefHeight="50.0" prefWidth="120.0" styleClass="primary-button" text="Save" visible="false">
             <font>
                 <Font size="18.0" />
             </font></Button>
-         <Button fx:id="delete_btn" disable="true" layoutX="849.0" layoutY="14.0" mnemonicParsing="false" onAction="#deleteButtonOnclick" prefHeight="30.0" prefWidth="70.0" styleClass="danger-button" text="Delete" visible="false" />
-         <Button fx:id="bookmark_btn" layoutX="678.0" layoutY="14.0" mnemonicParsing="false" onAction="#bookmarkButtonOnclick" prefHeight="30.0" prefWidth="145.0" styleClass="secondary-button" text="Add Bookmark" />
+         <Button fx:id="delete_btn" disable="true" layoutX="850.0" layoutY="10.0" mnemonicParsing="false" onAction="#deleteButtonOnclick" prefHeight="30.0" prefWidth="70.0" styleClass="danger-button" text="Delete" visible="false" />
+         <Button fx:id="bookmark_btn" layoutX="680.0" layoutY="10.0" mnemonicParsing="false" onAction="#bookmarkButtonOnclick" prefHeight="30.0" prefWidth="140.0" styleClass="secondary-button" text="Add Bookmark" />
     </children>
    </AnchorPane>
 </ScrollPane>
