--- a/src/views/shelf_contents.fxml
+++ b/src/views/shelf_contents.fxml
@@ -9,12 +9,12 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="660.0" prefWidth="1040.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ShelfContents">
     <children>
-        <Button fx:id="category_choice_box" disable="true" layoutX="14.0" layoutY="14.0" prefWidth="50.0" text="+" visible="false">
+        <Button fx:id="add_btn" disable="true" layoutX="14.0" layoutY="14.0" onAction="#add_btn_hanlder" prefWidth="50.0" text="+" visible="false">
          <font>
             <Font name="System Bold" size="18.0" />
          </font></Button>
         
-        <Button fx:id="category_choice_box" disable="true" layoutX="74.0" layoutY="14.0" prefWidth="50.0" text="-" visible="false">
+        <Button fx:id="remove_btn" disable="true" layoutX="74.0" layoutY="14.0" onAction="#remove_btn_handler" prefWidth="50.0" text="-" visible="false">
             <font>
                 <Font name="System Bold" size="18.0" />
             </font>
